@@ -1,3 +1,5 @@
+ * bringing over APLOGNO() number assignments from apache subversion tree.
+
 v2.0.9
 ----------------------------------------------------------------------------------------------------
  * fixed a compile error on warn level about redefintion of AP_ENABLE_EXCEPTION_HOOK. Fixes #132.
